--- a/new1.html
+++ b/new1.html
@@ -12,9 +12,8 @@
     Mobile No: 9121689717 </b>
     </h3>
     <hr>
-    <h1 style="background-color: blueviolet;">QUALIFICATION</h1>
-    <h3>Bcom graduation </h3>
-    <h3> tara degree college</h3>
+    <a href="./qualification.html"><b>QUALIFICATION</b></a>
+    
     <h1 style="background-color: blueviolet;">SKILLS</h1>
     <h3>Ms Office<br>
     good communication<br />
