3files add,1file change

--- a/new1.html
+++ b/new1.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="new1.css">
 </head>
 <body>
- <img src="image/mahi1.jpg" height="300px" width="500px" alt="mahi" >
+ 
+  <img src="./mahi1.jpg"height="200px" width="350px" alt="mahi">
     <h3><b>NAME : Dande Mahendhar<br />
     Mail: mahendhar.023@gmail.com <br />
     Mobile No: 9121689717 </b>
     </h3>
     <hr>
-    <a href="./qualification.html"><b>QUALIFICATION</b></a>
+    <div>
+    <div class="div1"><a href="./qualification.html"><b>QUALIFICATION</b></a></div>
     
-    <h1 style="background-color: blueviolet;">SKILLS</h1>
-    <h3>Ms Office<br>
-    good communication<br />
-      grasping power</h3>
-    <h1 style="background-color: blueviolet;">HOBIES</h1>
-    <h3>chess<br>
-      swimming<br>
-    </h3>
+    <div class="div2"> <a href="./skills.html"><b>SKILLS</b></a></div>
+    
+    <div class="div3"> <a href="./hobies.html"><b>HOBIES</b></a></div></div>
+   
 
 </body>
 </html>
